# MGHD

./: .coverage  .gitignore  README.md  additional-notes.md  coverage.xml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mghd-preflight.yml
checkpoints/foundation_s/: train_log.json
color_cache/: color_666_d11.npz  color_666_d13.npz  color_666_d15.npz  color_666_d17.npz  color_666_d19.npz  color_666_d21.npz  color_666_d23.npz  color_666_d27.npz  color_666_d3.npz  color_666_d7.npz  color_666_d9.npz
core/datasets/google_qec3v5/: google_dataset_analysis.ipynb
data/results_DepNoiseOnly_24112025/: evaluation_stim_s10000_b1000.json  run_meta.json  train_log.json  train_log.jsonl
data/results_GarnetCudaQ_24112025/: evaluation_cudaq_s1000_b1000.json  run_meta.json  train_log.json  train_log.jsonl
data/results_GarnetCudaQ_d3_24112025/: evaluation_cudaq_s10k_b2k.json  evaluation_cudaq_s10k_b2k_mwpf.json  evaluation_cudaq_s1k_b1k.json  run_meta.json  train_log.json  train_log.jsonl
data/results_d15_garnet_mwpm_23112025/: evaluation_cudaq_s100_b1000.json  evaluation_stim_s1000_b1000.json  run_meta.json  train_log.json  train_log.jsonl
data/results_gross_heron_lsd_22112025/: run_meta.json
data/results_validation_d3_5/20251120-175741_surface_d5_iqm_garnet_example/: eval_binary_d5_p005.json  (+5 more)
docs/: IMPLEMENTATION_SUMMARY.md
mghd/: CIRCUIT_LEVEL_FIX_SUMMARY.md  __init__.py
mghd/benchmarks/: __init__.py  estimate_latency.py  make_surrogate_hls.py  quantize_test.py  save_binary_ckpt.py
mghd/cli/: __init__.py  bench_clustered_sweep_surface.py  bench_decode.py  cluster_crops_train.py  eval.py  make_cluster_crops.py  precompute_color_codes.py  preflight_mghd.py  train.py  train_circuit.py  train_core.py
mghd/codes/: __init__.py  external_color_488.py  external_providers.py  pcm_real.py  qpu_profile.py  registry.py
mghd/config/: hparams.json
mghd/core/: __init__.py  blocks.py  core.py  features_v2.py  model_v2.py  panq_functions.py
mghd/decoders/: __init__.py  dem_matching.py  dem_metric.py  dem_utils.py  ensemble.py  erasure_peeling.py  erasure_surface_ml.py  lsd_teacher.py  mix.py  mwpf_ctx.py  mwpf_teacher.py  mwpm_ctx.py  mwpm_fallback.py  nvqldpc_teacher.py
mghd/qpu/: __init__.py
mghd/samplers/: __init__.py  cudaq_sampler.py  registry.py  stim_sampler.py
mghd/tad/: __init__.py  context.py  weighting.py
mghd/tools/: __init__.py  gross_circuit_dataset.py  plot_run.py  teacher_eval.py
mghd/utils/: __init__.py  code_loader.py  curriculum.py  graphlike.py  metrics.py
scratchpad/initial-test/: .gitignore  .pre-commit-config.yaml  Agents.md  EXEC_SUMMARY.md  FINAL_OPTIMAL_CONFIG.md  FINAL_PERFORMANCE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MGHD_V2_IMPLEMENTATION.md  MGHD_simple_diagram.txt  Makefile  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  README.md  STEP2_COMPLETE.md  bb_panq.py  bb_panq_functions.py  bb_test.py  best_hyperparameters.json  clean-core.code-workspace  codes_q.py  codes_registry.py  core.py  gnn_osd.py  gnn_test.py  gnn_train.py  mghd_best.pt  mghd_vs_baseline_metrics.npy  optimization_results_20250815_214727.json  panq_functions.py  panq_nvidia.py  plan_CrossShot.txt  plot_comparison.py  poc_gnn_train.py  poc_gnn_train_lf.py  poc_loss_function.py  poc_my_models.py  pyproject.toml  pytest.ini  requirements.txt  rewrite_imports.py  (+5 more)
scratchpad/initial-test/fastpath/c_api/: CMakeLists.txt  fastpath_capi.cpp  fastpath_capi.h  persist_lut_capi.cu  persist_lut_capi_old.cu
scripts/: audit_teacher_contracts.py  benchmark_trajectory_sampler.py  decoder_capability_gate.py  diagnose_decode_gap.py  diagnose_strategies.py  eval_mghd_vs_mwpm.py  evaluate_model.py  generate_bb_crops.sh  memory_experiment.py  plot_mghd_vs_mwpm.py  plot_validation.py  resume_script.sh  run_bb_gross_heron.sh  run_curriculum.sh  run_d15_surface.sh  run_eval_and_plot.sh  run_execution_plan_v3.sh  run_final_d15.sh  run_foundation_training.sh  run_surface_lsd_curriculum.sh  run_surface_mwpm_circuit.sh  run_surface_mwpm_circuit_extended.sh  run_validation_d3_5.sh  start_tmux_depnoise_benchmark.sh  start_tmux_garnet_cudaq_benchmark.sh  start_tmux_garnet_cudaq_d3.sh  start_tmux_garnet_cudaq_d5.sh  start_tmux_heron_surface_d11.sh  start_tmux_training.sh
tests/: test_cluster_logic.py  test_clustered_coset_projector.py  test_clustered_decode_empty.py  test_clustered_torch_fallback.py  test_codes_registry_css.py  test_color_488_provider_and_cache.py  test_color_and_bb_full.py  test_core_decoder_public.py  test_core_forward_resize.py  test_core_forward_smoke.py  test_core_graph_features.py  test_core_helpers.py  test_core_pack_branches.py  test_core_pack_erasure.py  test_cudaq_obs_smoke.py  test_cudaq_smoke_no_pymatching.py  test_dem_eval_pipeline.py  test_dem_matching_teacher.py  test_dem_metric_smoke.py  test_dem_utils.py  test_ensemble_label.py  test_erasure_awareness.py  test_erasure_solver.py  test_erasure_surface_ml_errors.py  test_features_v2_invariance.py  test_garnet_adapter_synth.py  test_garnet_split_components.py  test_graphlike_utils.py  test_ler_injection.py  test_lsd_active_components.py  test_lsd_teacher_shapes.py  test_masks_shapes.py  test_metrics_edges.py  test_metrics_smoke.py  test_metrics_wilson_ci.py  test_mghd_invocation_guard.py  test_mix_error_paths.py  test_mix_routes.py  test_mix_weights.py  test_mwpm_ctx_fallback.py  (+25 more)
tools/: __init__.py  bench_clustered_sweep_surface.py  check_ibm_profile.py  fetch_ibm_coupling.py
tools/dev/: audit_repo.py
(+243 files in other folders)
