[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mghd"
version = "0.0.0"
description = "Mamba-GNN Hybrid Decoder"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "MGHD Team"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy", "black"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mghd*"]
exclude = ["tests*", "docs*", "examples*", "scratchpad*", "tools/dev*"]

[tool.setuptools.package-data]
mghd = ["qpu/profiles/*.json", "**/*.yaml"]

[project.scripts]
mghd-preflight = "mghd.cli.preflight_mghd:main"
mghd-train = "mghd.cli.train_core:main"
mghd-bench = "mghd.cli.bench_decode:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E"]
ignore = [
  "E203",
  "E401",
  "E402",
  "E501",
  "E701",
  "E702",
  "E731",
  "SIM102",
  "SIM105",
  "UP006",
  "UP035",
  "F401",
  "F403",
  "F405",
  "F811",
]
